<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/notification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_view"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/offer_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_offer_for_veg_orders"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/validity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/sep_08_2017"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/offer_code"
            fontPath="fonts/Nunito-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/use_code_ad123"
            android:textColor="@color/theme"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>


</LinearLayout>