<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.foodbox.foodcabby.activities.WelcomeScreenActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Dots Layout-->


        <!-- Skip Button-->

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/theme"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/test"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="test"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/test2"
            app:layout_constraintTop_toBottomOf="@+id/skip"/>

        <TextView
            android:id="@+id/test2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="test"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
            app:layout_constraintTop_toBottomOf="@+id/test"/>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/test2"
            tools:layout_editor_absoluteX="20dp">

            <LinearLayout
                android:id="@+id/layoutDots"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/sign_in_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextWhite" />

            <Button
                android:id="@+id/sign_up_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_with_storck"
                android:text="@string/signup"
                android:textColor="@color/colorTextBlack" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>